--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-21  Oliver Obst  <fruit@robolog.org>
+
+	* ./utility/console/commands/signature/
+	Added various files for implementing the signatures of console 
+	commands. 
+
 2002-08-16  Oliver Obst  <fruit@robolog.org>
 
 	* ./utility/forwarder/example.cc
