--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2002-09-24	Tom Howard	<tomhoward@users.sf.net>
+
+	* ./Makefile.am
+	* ./configure.in
+	* ./rel.awk
+	* ./simulator/Makefile.am
+	* ./simulator/sensor/Makefile.am
+	* ./simulator/sensor/sensor.h
+	Added sensor.h and associated Makefile.am files.  Also added
+	utility targets such as addlog, release, commit, etc.
+
 2002-08-23  Oliver Obst  <fruit@robolog.org>
 
 	* ./utility/forwarder/forwarder.cc
