--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-25	Tom Howard	<tomhoward@users.sf.net>
+
+	* ./simulator/sensor/sensor.h
+	Changed namespace to rcss::sensor
+
 2002-09-24	Tom Howard	<tomhoward@users.sf.net>
 
 	* ./Makefile.am
