--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-25  Oliver Obst  <fruit@robolog.org>
+
+	* ./configure.in
+	* ./simulator/Makefile.am
+	* ./simulator/simulator.h
+	* ./simulator/simulator.cc	
+	* ./simulator/example.cc
+	Added first steps for a base simulator using ODE.
+
 2002-09-25	Tom Howard	<tomhoward@users.sf.net>
 
 	* ./simulator/sensor/sensor.h
