--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2002-11-15      Tom Howard      <tomhoward@users.sf.net>
 
         * ./Makefile.am
+        addlog no longer creates empty logs
+
+2002-11-15      Tom Howard      <tomhoward@users.sf.net>
+
+        * ./Makefile.am
         tag target now creates branch
 
 2002-10-16  Oliver Obst  <fruit@robolog.org>
